# SwitchEnv

./: .gitignore  CLAUDE.md  README.MD  index.html  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
.trae/specs/activate-group-performance-logging/: checklist.md  spec.md  tasks.md
docs/: README.md
docs/pref/: activate_deactivate_perf_analysis.md
scripts/: generate-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup_commands.rs  chain_commands.rs  env_commands.rs  group_commands.rs  group_io_commands.rs  history_commands.rs  mod.rs  settings_commands.rs  template_commands.rs  utils_commands.rs
src-tauri/src/db/: migration_002.sql  migrations.rs  mod.rs  schema.sql
src-tauri/src/models/: mod.rs
src-tauri/src/repositories/: backup_repo.rs  chain_repo.rs  env_group_repo.rs  history_repo.rs  mod.rs  template_repo.rs
src-tauri/src/services/: env_service.rs  mod.rs
src/components/: ConfirmDialog.tsx  ImportConflictDialog.tsx  Modal.tsx  SearchBar.tsx  ToastProvider.tsx
src/contexts/: UpdateContext.tsx
src/hooks/: useTheme.ts
src/pages/: EnvVarListPage.tsx  EnvVarManager.tsx  HistoryPage.tsx  SettingsPage.tsx  SystemVars.tsx  UserVars.tsx
src/services/: ipc.ts  updater.ts
src/stores/: useAppStore.ts
src/types/: index.ts
(+5 files in other folders)
